# treelyze

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_file_summarizer.py  test_tree_analyzer.py
treelyze/: file_summarizer.py  main.py  tree_analyzer.py
